--- a/ReceiveLogsTopic/ReceiveLogsTopic.csproj
+++ b/ReceiveLogsTopic/ReceiveLogsTopic.csproj
@@ -8,4 +8,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+    </ItemGroup>
+
 </Project>
